GL/Projet_GL/src/test/deca/context/invalid/cast/cast_int_class.deca
// Description :
// Test contextuel : cast explicite d'un int vers une classe (A).
//
// Résultat attendu :
// Erreur contextuelle : cast impossible (type source int incompatible avec type cible A).
// Localisation : ligne du cast.

class A {}

{
    int x = 1;
    A a = (A) (x);
}
